--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,314 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Lato", sans-serif;
+}
+.twitter {
+  display: flex;
+}
+.sidebar {
+  width: 25%;
+  position: fixed;
+  left: 0;
+  height: 100%;
+  border-right: 1px solid#e6ecf0;
+}
+
+.sidebar ul li a {
+  display: flex;
+  align-items: center;
+  color: black;
+  padding: 20px 35px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.sidebar ul li :hover {
+  background-color: #e8f5fe;
+  color: #1da1f2;
+}
+.icons {
+  margin-right: 10px;
+  font-size: 25px;
+}
+.logo {
+  font-size: 23px;
+  color: #1da1f2;
+}
+.logos {
+  font-size: 23px;
+  color: #1da1f2;
+}
+.sidebar_btn a {
+  text-decoration: none;
+  background-color: #1da1f2;
+  color: white;
+  padding: 13px 35px;
+  border-radius: 50px;
+  margin: 0 35px;
+  outline: none;
+  display: block;
   text-align: center;
 }
+.posts {
+  width: 50%;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  margin-left: 25%;
+  border-right: 1px solid#e6ecf0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.posts_home {
+  width: 50%;
+  position: fixed;
+  top: 0;
+  padding: 15px;
+  font-weight: 700;
+  border-bottom: 1px solid#e6ecf0;
+  border-right: 1px solid#e6ecf0;
+  background-color: white;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.create {
+  padding-top: 70px;
+  border-bottom: 1px solid#e6ecf0;
+  padding-bottom: 20px;
+}
+.create_first {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 0 20px;
+}
+.create_img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.create_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.create_input {
+  margin-left: 20px;
+}
+.input-text {
+  border: none;
+  outline: none;
+  font-size: 18px;
+}
+.create_second {
+  display: flex;
+  margin-top: 15px;
+  margin-left: 20px;
+}
+.create_icons {
+  width: 50%;
+}
+.ic {
+  margin: 0 6px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #1da1f2;
+}
+.create_btn {
+  width: 50%;
+  text-align: right;
+  margin-right: 20px;
+}
+.create a {
+  text-decoration: none;
+  background-color: #1da1f2;
   color: white;
+  border-radius: 50px;
+  outline: none;
+  padding: 10px 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.post {
+  padding: 20px;
+  border-bottom: 1px solid #e6ecf0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.post_first {
+  display: flex;
+  align-items: center;
+}
+.post_img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.post_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.post_name {
+  margin-left: 8px;
+}
+.post_username {
+  margin-left: 6px;
+  color: silver;
+  font-weight: 300;
+}
+.post_username span {
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 14px;
+}
+.verify {
+  margin-left: 3px;
+  color: #1da1f2;
+}
+.post_details {
+  margin: 8px 30px;
+  overflow: hidden;
+}
+.post_details_img {
+  width: 100%;
+  margin-top: 6px;
+}
+.post_details_img img {
+  width: 100%;
+}
+.reactions {
+  display: flex;
+  justify-content: space-between;
+  margin: 8px 0;
+}
+.reactions span {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: #504d4d;
+}
+.re {
+  font-size: 20px;
+  color: silver;
+}
+.trends {
+  width: 25%;
+}
+.trends_search {
+  position: fixed;
+  width: 25%;
+  top: 10px;
+  right: 0;
+  /* border-bottom: 1px solid #e6ecf0; */
+  padding-bottom: 17px;
+}
+.input_search {
+  border: none;
+  outline: none;
+  width: 90%;
+  margin-left: 20px;
+  background-color: #f5f4f2;
+  border-radius: 25px;
+  padding: 15px 30px;
+  font-size: 14px;
+}
+.trend_icon {
+  position: absolute;
+  top: 15px;
+  left: 30px;
+}
+.search-icon {
+  font-size: 18px;
+  color: silver;
+}
+.keywords {
+  position: fixed;
+  top: 80px;
+  right: 0;
+  width: 25%;
+  padding: 20px 20px;
+}
+.key {
+  background-color: #f5f8fa;
+  padding: 15px;
+  border-radius: 5px;
+}
+.keywords_heading {
+  font-size: 20px;
+  border-bottom: 1px solid #e6ecf0;
+  padding-bottom: 8px;
+}
+.country {
+  font-size: 14px;
+  color: silver;
+  font-weight: 300;
+  margin: 10px 0;
+}
+.keywords_name {
+  margin-bottom: 8px;
+}
+.keywords_tweets {
+  margin-top: 7px;
+  color: silver;
+  font-size: 14px;
+  font-weight: 300;
+}
+@media (max-width: 700px) {
+  .sidebar {
+    width: 30%;
   }
-  to {
-    transform: rotate(360deg);
+  .sidebar ul li a {
+    padding: 16px 12px;
+
+    font-size: 16px;
+  }
+  .logo {
+    display: none;
+  }
+  .icons {
+    display: none;
+  }
+  .sidebar_btn a {
+    width: 90%;
+    padding: 10px;
+    font-size: 13px;
+    margin-left: 3px;
+  }
+  .trends {
+    display: none;
+  }
+  .posts {
+    width: 70%;
+
+    margin-left: 30%;
+  }
+  .posts_home {
+    width: 70%;
+  }
+  .create_first {
+    padding: 5px;
+  }
+  .create_img {
+    width: 35px;
+    height: 35px;
+  }
+  .input-text {
+    font-size: 14px;
+  }
+  .ic {
+    margin: 0 7px;
+    font-size: 15px;
+  }
+
+  .create a {
+    font-size: 12px;
+    padding: 5px 10px;
+  }
+  .post {
+    padding: 10px;
+  }
+
+  .post_name {
+    font-size: 15px;
+  }
+  .post_username {
+    font-size: 13px;
   }
 }
